--- a/SkEditorPlus/SkEditorPlus.csproj
+++ b/SkEditorPlus/SkEditorPlus.csproj
@@ -27,15 +27,14 @@
     <Content Include="Images\SkEditor.ico" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Autoupdater.NET.Official" Version="1.7.4" />
     <PackageReference Include="AvalonEditB" Version="1.4.1">
       <NoWarn>NU1701</NoWarn>
     </PackageReference>
     <PackageReference Include="DiscordRichPresence" Version="1.0.175" />
-    <PackageReference Include="HandyControls" Version="3.4.1" />
-    <PackageReference Include="HandyControls.Lang.pl" Version="3.4.1" />
+    <PackageReference Include="HandyControls" Version="3.4.2" />
+    <PackageReference Include="HandyControls.Lang.pl" Version="3.4.2" />
+    <PackageReference Include="Microsoft.Web.WebView2" Version="1.0.1343.22" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-    <PackageReference Include="OpenAI" Version="1.2.0" />
     <PackageReference Include="Stylet" Version="1.3.6" />
   </ItemGroup>
   <ItemGroup>
