--- a/SkEditorPlus/App.config
+++ b/SkEditorPlus/App.config
@@ -2,10 +2,31 @@
 <configuration>
     <configSections>
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
             <section name="SkEditorPlus.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
     </configSections>
     <userSettings>
+        <Properties.Settings>
+            <setting name="Font" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="ApiKey" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="Wrapping" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="AutoSecondCharacter" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="DiscordRPC" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="AutoSave" serializeAs="String">
+                <value>False</value>
+            </setting>
+        </Properties.Settings>
         <SkEditorPlus.Properties.Settings>
             <setting name="Font" serializeAs="String">
                 <value />
