--- a/SkEditorPlus/App.config
+++ b/SkEditorPlus/App.config
@@ -43,6 +43,12 @@
             <setting name="DiscordRPC" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="AutoSave" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="AutoNewLineAndTab" serializeAs="String">
+                <value>False</value>
+            </setting>
         </SkEditorPlus.Properties.Settings>
     </userSettings>
 </configuration>
