--- a/SkEditorPlus/App.config
+++ b/SkEditorPlus/App.config
@@ -49,6 +49,15 @@
             <setting name="AutoNewLineAndTab" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="Mica" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="EditorTransparency" serializeAs="String">
+                <value>255</value>
+            </setting>
+            <setting name="Language" serializeAs="String">
+                <value>English</value>
+            </setting>
         </SkEditorPlus.Properties.Settings>
     </userSettings>
 </configuration>
