--- a/SkEditorPlus/SkEditorPlus.csproj
+++ b/SkEditorPlus/SkEditorPlus.csproj
@@ -110,6 +110,9 @@
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
       <SubType>Designer</SubType>
     </Page>
+    <Page Update="Styles\ScrollViewerStyle.xaml">
+      <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
+    </Page>
     <Page Update="Styles\SearchPanelStyle.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
       <SubType>Designer</SubType>
@@ -117,6 +120,9 @@
     <Page Update="Styles\OptionsTabControlStyle.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
       <SubType>Designer</SubType>
+    </Page>
+    <Page Update="Styles\MenuStyle.xaml">
+      <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
     </Page>
     <Page Update="Styles\TabControlStyle.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
