--- a/SkEditorPlus/SkEditorPlus.csproj
+++ b/SkEditorPlus/SkEditorPlus.csproj
@@ -3,6 +3,7 @@
     <OutputType>WinExe</OutputType>
     <TargetFramework>net6.0-windows</TargetFramework>
     <UseWPF>true</UseWPF>
+	<UseWindowsForms>true</UseWindowsForms>
     <AssemblyName>SkEditorPlus</AssemblyName>
     <RootNamespace>SkEditorPlus</RootNamespace>
     <Version>1.0.0.0</Version>
@@ -34,16 +35,16 @@
     <Resource Include="Images\SkEditor.ico" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="AvalonEditB" Version="1.4.1">
+    <PackageReference Include="AvalonEditB" Version="1.6.0">
       <NoWarn>NU1701</NoWarn>
     </PackageReference>
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.0.0" />
     <PackageReference Include="DiscordRichPresence" Version="1.1.3.18" />
     <PackageReference Include="HandyControls" Version="3.4.4" />
     <PackageReference Include="HandyControls.Lang.pl" Version="3.4.4" />
-    <PackageReference Include="Microsoft.Web.WebView2" Version="1.0.1418.22" />
+    <PackageReference Include="Microsoft.Web.WebView2" Version="1.0.1518.46" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
-    <PackageReference Include="Octokit" Version="4.0.2" />
+    <PackageReference Include="Octokit" Version="5.0.0" />
     <PackageReference Include="Renci.SshNet.Async" Version="1.4.0" />
     <PackageReference Include="SharpVectors" Version="1.8.1" />
     <PackageReference Include="SSH.NET" Version="2020.0.2" />
