--- a/SkEditorPlus/App.config
+++ b/SkEditorPlus/App.config
@@ -31,9 +31,6 @@
             <setting name="Font" serializeAs="String">
                 <value />
             </setting>
-            <setting name="ApiKey" serializeAs="String">
-                <value />
-            </setting>
             <setting name="Wrapping" serializeAs="String">
                 <value>False</value>
             </setting>
@@ -57,6 +54,12 @@
             </setting>
             <setting name="Language" serializeAs="String">
                 <value>English</value>
+            </setting>
+            <setting name="CodeSkriptApiKey" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="PastebinApiKey" serializeAs="String">
+                <value />
             </setting>
         </SkEditorPlus.Properties.Settings>
     </userSettings>
