--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -91,7 +91,11 @@ jobs:
 
     # Create the app package by building and packaging the Windows Application Packaging project
     - name: Create the app package
-      run: msbuild $env:Wap_Project_Path /p:Configuration=$env:Configuration /p:ParentConfiguration=$env:Configuration /t:Publish /p:PublishDir=bin/Release/net6.0-windows
+      run: |
+        $directoryPath = "SkEditorPlus\SkEditorPlus\bin\Release\net6.0-windows"
+        $zipFilePath = "$directoryPath.zip"
+        Add-Type -AssemblyName System.IO.Compression.FileSystem
+        [System.IO.Compression.ZipFile]::CreateFromDirectory("$directoryPath", "$zipFilePath")
 
     # Remove the pfx
     - name: Remove the pfx
