--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -89,6 +89,11 @@ jobs:
         $certificatePath = Join-Path -Path $env:Wap_Project_Directory -ChildPath GitHubActionsWorkflow.pfx
         [IO.File]::WriteAllBytes("$certificatePath", $pfx_cert_byte)
 
+    - name: Show files and directories in bin directory
+      run: |
+        Get-ChildItem SkEditorPlus\SkEditorPlus\SkEditorPlus\bin -Recurse | 
+        Foreach-Object {Write-Output $_.FullName}
+
     # Create the app package by building and packaging the Windows Application Packaging project
     - name: Create the app package
       run: |
