--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -91,7 +91,7 @@ jobs:
 
     - name: Show files and directories in bin directory
       run: |
-        Get-ChildItem SkEditorPlus\SkEditorPlus\SkEditorPlus\bin -Recurse | 
+        Get-ChildItem SkEditorPlus\bin -Recurse | 
         Foreach-Object {Write-Output $_.FullName}
 
     # Create the app package by building and packaging the Windows Application Packaging project
