--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -89,19 +89,17 @@ jobs:
         $certificatePath = Join-Path -Path $env:Wap_Project_Directory -ChildPath GitHubActionsWorkflow.pfx
         [IO.File]::WriteAllBytes("$certificatePath", $pfx_cert_byte)
 
-    - name: Show files and directories in bin directory
-      run: |
-        Write-Output "hello"
-        Get-ChildItem bin -Recurse | 
-        Foreach-Object {Write-Output $_.FullName}
-
     # Create the app package by building and packaging the Windows Application Packaging project
     - name: Create the app package
-      run: |
-        $directoryPath = "SkEditorPlus\bin\Release\net6.0-windows"
-        $zipFilePath = "$directoryPath.zip"
-        Add-Type -AssemblyName System.IO.Compression.FileSystem
-        [System.IO.Compression.ZipFile]::CreateFromDirectory("$directoryPath", "$zipFilePath")
+      run: msbuild $env:Wap_Project_Path /p:Configuration=$env:Configuration /t:Publish /p:PublishDir=bin/Release/net6.0-windows
+    
+    - name: Create the app package
+      run: msbuild $env:Wap_Project_Path /p:Configuration=$env:Configuration /p:UapAppxPackageBuildMode=$env:Appx_Package_Build_Mode /p:AppxBundle=$env:Appx_Bundle /p:PackageCertificateKeyFile=GitHubActionsWorkflow.pfx /p:PackageCertificatePassword=${{ secrets.Pfx_Key }}
+      env:
+        Appx_Bundle: Always
+        Appx_Bundle_Platforms: x64
+        Appx_Package_Build_Mode: StoreUpload
+        Configuration: ${{ matrix.configuration }}
 
     # Remove the pfx
     - name: Remove the pfx
@@ -111,5 +109,5 @@ jobs:
     - name: Upload build artifacts
       uses: actions/upload-artifact@v3
       with:
-        name: ZIP file
+        name: MSIX Package
         path: ${{ env.Wap_Project_Directory }}\AppPackages
