New icon and font fix

--- a/SkEditorPlus/SkEditorPlus.csproj
+++ b/SkEditorPlus/SkEditorPlus.csproj
@@ -57,6 +57,7 @@
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Images\SkEditor.svg" />
+    <Content Include="Images\SkEditor.ico" />
     <Content Include="Languages\English.xaml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
