--- a/SkEditorPlus/App.config
+++ b/SkEditorPlus/App.config
@@ -29,13 +29,13 @@
         </Properties.Settings>
         <SkEditorPlus.Properties.Settings>
             <setting name="Font" serializeAs="String">
-                <value />
+                <value>Cascadia Mono</value>
             </setting>
             <setting name="Wrapping" serializeAs="String">
                 <value>False</value>
             </setting>
             <setting name="AutoSecondCharacter" serializeAs="String">
-                <value>True</value>
+                <value>False</value>
             </setting>
             <setting name="DiscordRPC" serializeAs="String">
                 <value>True</value>
@@ -60,6 +60,9 @@
             </setting>
             <setting name="PastebinApiKey" serializeAs="String">
                 <value />
+            </setting>
+            <setting name="DocsLink" serializeAs="String">
+                <value>https://docs.skunity.com/</value>
             </setting>
         </SkEditorPlus.Properties.Settings>
     </userSettings>
