--- a/SkEditorPlus/SkEditorPlus.csproj
+++ b/SkEditorPlus/SkEditorPlus.csproj
@@ -6,11 +6,11 @@
 	<UseWindowsForms>true</UseWindowsForms>
     <AssemblyName>SkEditorPlus</AssemblyName>
     <RootNamespace>SkEditorPlus</RootNamespace>
-    <Version>1.4.3</Version>
+    <Version>1.4.4</Version>
     <Configurations>Debug;Release</Configurations>
     <Copyright>Copyright © Notro 2022</Copyright>
-    <FileVersion>1.4.3</FileVersion>
-    <AssemblyVersion>1.4.3</AssemblyVersion>
+    <FileVersion>1.4.4</FileVersion>
+    <AssemblyVersion>1.4.4</AssemblyVersion>
     <ApplicationIcon>Images\SkEditor.ico</ApplicationIcon>
     <SignAssembly>False</SignAssembly>
   </PropertyGroup>
@@ -32,8 +32,11 @@
     <Page Remove="Languages\Chinese.xaml" />
     <Page Remove="Languages\English.xaml" />
     <Page Remove="Languages\French.xaml" />
+    <Page Remove="Languages\PirateSpeak.xaml" />
     <Page Remove="Languages\Polski.xaml" />
+    <Page Remove="Languages\Russian.xaml" />
     <Page Remove="Languages\Spanish.xaml" />
+    <Page Remove="Languages\Turkish.xaml" />
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Fonts\Segoe Fluent Icons.ttf">
@@ -42,9 +45,6 @@
     <Resource Include="Images\SkEditor.ico" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="AvalonEditB" Version="1.6.0">
-      <NoWarn>NU1701</NoWarn>
-    </PackageReference>
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.0.0" />
     <PackageReference Include="DiscordRichPresence" Version="1.1.3.18" />
     <PackageReference Include="HandyControls" Version="3.4.4" />
@@ -68,6 +68,11 @@
     <Content Include="Languages\Chinese.xaml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="Languages\PirateSpeak.xaml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Content>
     <Content Include="Languages\English.xaml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
@@ -79,9 +84,20 @@
       <SubType>Designer</SubType>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="Languages\Russian.xaml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Languages\Spanish.xaml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="Languages\Turkish.xaml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <Reference Include="AvalonEditB">
+      <HintPath>..\..\SkAvalonEdit\AvalonEditB\bin\Debug\net472\AvalonEditB.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Update="Properties\Settings.Designer.cs">
