--- a/SkEditorPlus/App.config
+++ b/SkEditorPlus/App.config
@@ -64,6 +64,9 @@
             <setting name="DocsLink" serializeAs="String">
                 <value>https://docs.skunity.com/</value>
             </setting>
+            <setting name="CheckForUpdates" serializeAs="String">
+                <value>True</value>
+            </setting>
         </SkEditorPlus.Properties.Settings>
     </userSettings>
 </configuration>
