--- a/SkEditorPlus/Properties/Settings.settings
+++ b/SkEditorPlus/Properties/Settings.settings
@@ -41,5 +41,8 @@
     <Setting Name="DocsLink" Type="System.String" Scope="User">
       <Value Profile="(Default)">https://docs.skunity.com/</Value>
     </Setting>
+    <Setting Name="CheckForUpdates" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
