--- a/SkEditorPlus/SkEditorPlus.csproj
+++ b/SkEditorPlus/SkEditorPlus.csproj
@@ -6,11 +6,11 @@
 	<UseWindowsForms>true</UseWindowsForms>
     <AssemblyName>SkEditorPlus</AssemblyName>
     <RootNamespace>SkEditorPlus</RootNamespace>
-    <Version>1.5.1</Version>
+    <Version>1.5.2</Version>
     <Configurations>Debug;Release</Configurations>
-    <Copyright>Copyright © Notro 2022</Copyright>
-    <FileVersion>1.5.1</FileVersion>
-    <AssemblyVersion>1.5.1</AssemblyVersion>
+    <Copyright>Copyright © Notro 2023</Copyright>
+    <FileVersion>1.5.2</FileVersion>
+    <AssemblyVersion>1.5.2</AssemblyVersion>
     <ApplicationIcon>Images\SkEditor.ico</ApplicationIcon>
     <SignAssembly>False</SignAssembly>
   </PropertyGroup>
@@ -27,6 +27,7 @@
     <None Remove="Fonts\OpenSans-Medium.ttf" />
     <None Remove="Fonts\Segoe Fluent Icons.ttf" />
     <None Remove="Images\NoFiles.png" />
+    <None Remove="Images\Refresh.svg" />
     <None Remove="Images\SkEditor.svg" />
   </ItemGroup>
   <ItemGroup>
@@ -46,16 +47,17 @@
     <Resource Include="Images\NoFiles.png">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Resource>
+    <Resource Include="Images\Refresh.svg" />
     <Resource Include="Images\SkEditor.ico" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="CommunityToolkit.Mvvm" Version="8.0.0" />
+    <PackageReference Include="CommunityToolkit.Mvvm" Version="8.1.0" />
     <PackageReference Include="DiscordRichPresence" Version="1.1.3.18" />
-    <PackageReference Include="HandyControls" Version="3.4.4" />
-    <PackageReference Include="HandyControls.Lang.pl" Version="3.4.4" />
-    <PackageReference Include="Microsoft.Web.WebView2" Version="1.0.1518.46" />
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
-    <PackageReference Include="Octokit" Version="5.0.0" />
+    <PackageReference Include="HandyControls" Version="3.4.5" />
+    <PackageReference Include="HandyControls.Lang.pl" Version="3.4.5" />
+    <PackageReference Include="Microsoft.Web.WebView2" Version="1.0.1661.34" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="Octokit" Version="5.0.2" />
     <PackageReference Include="Renci.SshNet.Async" Version="1.4.0" />
     <PackageReference Include="SharpVectors" Version="1.8.1" />
     <PackageReference Include="SSH.NET" Version="2020.0.2" />
