--- a/SkEditorPlus/App.config
+++ b/SkEditorPlus/App.config
@@ -67,6 +67,9 @@
             <setting name="CheckForUpdates" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="SyntaxHighlighting" serializeAs="String">
+                <value>Default</value>
+            </setting>
         </SkEditorPlus.Properties.Settings>
     </userSettings>
 </configuration>
