--- a/SkEditorPlus/SkEditorPlus.csproj
+++ b/SkEditorPlus/SkEditorPlus.csproj
@@ -6,11 +6,11 @@
 	<UseWindowsForms>true</UseWindowsForms>
     <AssemblyName>SkEditorPlus</AssemblyName>
     <RootNamespace>SkEditorPlus</RootNamespace>
-    <Version>1.5.2</Version>
+    <Version>1.6.0</Version>
     <Configurations>Debug;Release</Configurations>
     <Copyright>Copyright © Notro 2023</Copyright>
-    <FileVersion>1.5.2</FileVersion>
-    <AssemblyVersion>1.5.2</AssemblyVersion>
+    <FileVersion>1.6.0</FileVersion>
+    <AssemblyVersion>1.6.0</AssemblyVersion>
     <ApplicationIcon>Images\SkEditor.ico</ApplicationIcon>
     <SignAssembly>False</SignAssembly>
   </PropertyGroup>
@@ -32,8 +32,10 @@
   </ItemGroup>
   <ItemGroup>
     <Page Remove="Languages\Chinese.xaml" />
+    <Page Remove="Languages\Dutch.xaml" />
     <Page Remove="Languages\English.xaml" />
     <Page Remove="Languages\French.xaml" />
+    <Page Remove="Languages\German.xaml" />
     <Page Remove="Languages\PirateSpeak.xaml" />
     <Page Remove="Languages\Polski.xaml" />
     <Page Remove="Languages\Russian.xaml" />
@@ -58,6 +60,7 @@
     <PackageReference Include="Microsoft.Web.WebView2" Version="1.0.1661.34" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Octokit" Version="5.0.2" />
+    <PackageReference Include="Remotion.Linq" Version="2.2.0" />
     <PackageReference Include="Renci.SshNet.Async" Version="1.4.0" />
     <PackageReference Include="SharpVectors" Version="1.8.1" />
     <PackageReference Include="SSH.NET" Version="2020.0.2" />
@@ -72,6 +75,12 @@
     <Resource Include="Images\SkEditor.svg" />
     <Content Include="Images\SkEditor.ico" />
     <Content Include="Languages\Chinese.xaml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Languages\Dutch.xaml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Languages\German.xaml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Languages\PirateSpeak.xaml">
@@ -127,6 +136,9 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Update="Windows\FormattingWindow.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Update="Windows\MarketplaceWindow.xaml.cs">
       <SubType>Code</SubType>
     </Compile>
     <Compile Update="Windows\NewOptionsWindow.xaml.cs">
@@ -199,6 +211,9 @@
     <Page Update="Windows\FormattingWindow.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
       <SubType>Designer</SubType>
+    </Page>
+    <Page Update="Windows\MarketplaceWindow.xaml">
+      <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
     </Page>
     <Page Update="Windows\NewOptionsWindow.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
