--- a/SkEditorPlus/App.config
+++ b/SkEditorPlus/App.config
@@ -70,6 +70,24 @@
             <setting name="SyntaxHighlighting" serializeAs="String">
                 <value>Default</value>
             </setting>
+            <setting name="ProjectsExperiment" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="CompletionExperiment" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="BottomBarExperiment" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="AnalyzerExperiment" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="AlertsExperiment" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="LastAlertId" serializeAs="String">
+                <value>-1</value>
+            </setting>
         </SkEditorPlus.Properties.Settings>
     </userSettings>
 </configuration>
