--- a/SkEditorPlus/SkEditorPlus.csproj
+++ b/SkEditorPlus/SkEditorPlus.csproj
@@ -7,21 +7,23 @@
 	<UseWindowsForms>true</UseWindowsForms>
     <AssemblyName>SkEditorPlus</AssemblyName>
     <RootNamespace>SkEditorPlus</RootNamespace>
-    <Version>1.7.2</Version>
+    <Version>1.7.3</Version>
     <Configurations>Debug;Release</Configurations>
     <Copyright>Copyright © Notro 2023</Copyright>
-    <FileVersion>1.7.2</FileVersion>
-    <AssemblyVersion>1.7.2</AssemblyVersion>
+    <FileVersion>1.7.3</FileVersion>
+    <AssemblyVersion>1.7.3</AssemblyVersion>
     <ApplicationIcon>Images\SkEditor.ico</ApplicationIcon>
     <SignAssembly>False</SignAssembly>
+    <SupportedOSPlatformVersion>7.0</SupportedOSPlatformVersion>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DefineConstants>TRACE;Core</DefineConstants>
     <NoWarn>1701;1702,NU1701</NoWarn>
+    <DebugType>none</DebugType>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <DefineConstants>TRACE;Core</DefineConstants>
     <NoWarn>1701;1702,NU1701</NoWarn>
+    <DebugType>none</DebugType>
   </PropertyGroup>
   <ItemGroup>
     <None Remove="Fonts\CascadiaMono.ttf" />
@@ -30,18 +32,6 @@
     <None Remove="Images\NoFiles.png" />
     <None Remove="Images\Refresh.svg" />
     <None Remove="Images\SkEditor.svg" />
-  </ItemGroup>
-  <ItemGroup>
-    <Page Remove="Languages\Chinese.xaml" />
-    <Page Remove="Languages\Dutch.xaml" />
-    <Page Remove="Languages\English.xaml" />
-    <Page Remove="Languages\French.xaml" />
-    <Page Remove="Languages\German.xaml" />
-    <Page Remove="Languages\PirateSpeak.xaml" />
-    <Page Remove="Languages\Polski.xaml" />
-    <Page Remove="Languages\Russian.xaml" />
-    <Page Remove="Languages\Spanish.xaml" />
-    <Page Remove="Languages\Turkish.xaml" />
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Fonts\Segoe Fluent Icons.ttf">
@@ -56,7 +46,7 @@
   <ItemGroup>
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.1.0" />
     <PackageReference Include="DiscordRichPresence" Version="1.1.3.18" />
-    <PackageReference Include="HandyControls" Version="3.4.5" />
+    <PackageReference Include="Fastenshtein" Version="1.0.0.8" />
     <PackageReference Include="HandyControls.Lang.pl" Version="3.4.5" />
     <PackageReference Include="Microsoft.Web.WebView2" Version="1.0.1823.32" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
@@ -75,44 +65,16 @@
     </Resource>
     <Resource Include="Images\SkEditor.svg" />
     <Content Include="Images\SkEditor.ico" />
-    <Content Include="Languages\Chinese.xaml">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Languages\Dutch.xaml">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Languages\German.xaml">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Languages\PirateSpeak.xaml">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Content>
-    <Content Include="Languages\English.xaml">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Languages\French.xaml">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Languages\Polski.xaml">
-      <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
-      <SubType>Designer</SubType>
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Languages\Russian.xaml">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Languages\Spanish.xaml">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Languages\Turkish.xaml">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
+	  <Content Include="Languages\**">
+		  <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	  </Content>
   </ItemGroup>
   <ItemGroup>
     <Reference Include="AvalonEditB">
       <HintPath>..\..\SkAvalonEdit\AvalonEditB\bin\Debug\net472\AvalonEditB.dll</HintPath>
+    </Reference>
+    <Reference Include="HandyControl">
+      <HintPath>..\..\SkHandyControls\build\lib\net6.0\HandyControl.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -130,7 +92,7 @@
     <Compile Update="Windows\GenerateWindow.xaml.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Update="Windows\Generators\EventGenerator.xaml.cs">
+    <Compile Update="Windows\Generators\ParticleGenerator.xaml.cs">
       <SubType>Code</SubType>
     </Compile>
     <Compile Update="Windows\Generators\GuiGenerator.xaml.cs">
@@ -159,6 +121,9 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <None Update="Data\splashes.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="Images\GUI\1.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
@@ -190,9 +155,6 @@
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
       <SubType>Designer</SubType>
     </Page>
-    <Page Update="Styles\ScrollViewerStyle.xaml">
-      <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
-    </Page>
     <Page Update="Styles\SearchPanelStyle.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
       <SubType>Designer</SubType>
@@ -223,7 +185,7 @@
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
       <SubType>Designer</SubType>
     </Page>
-    <Page Update="Windows\Generators\EventGenerator.xaml">
+    <Page Update="Windows\Generators\ParticleGenerator.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
